# gmanager-glm

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.base.json
.github/workflows/: build-desktop.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: README.md  generate_icons.py  icon.icns
apps/desktop/src-tauri/src/: accounts.rs  groups.rs  lib.rs  main.rs  tags.rs
apps/desktop/src-tauri/src/auth/: mod.rs
apps/desktop/src-tauri/src/crypto/: mod.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src/api/: accounts.ts  groups.ts  index.ts  tags.ts
apps/desktop/src/components/: AccountBulkEdit.tsx  BatchActions.tsx  FilterChips.tsx  PasswordInput.tsx  SearchBar.tsx  index.ts
apps/desktop/src/hooks/: index.ts  useAccountSearch.ts  useAccountSelection.ts  useAuth.ts
apps/desktop/src/i18n/: config.ts  index.ts
apps/desktop/src/pages/: AuthPage.tsx  MainPage.tsx
apps/desktop/src/stores/: authStore.ts
apps/web/: .env.example  .env.production.example  Dockerfile  docker-compose.yml  index.html  nodemon.json  package.json  tsconfig.json  tsconfig.server.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/data/: gmanager.db-shm  gmanager.db-wal
apps/web/server/: app.ts  config.ts  index.ts
apps/web/src/: App.tsx  styles.css
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  cryptic-swinging-storm.md  index.md  windows-build-guide.md
(+27 files in other folders)
