[package]
name = "gmanager-desktop"
version = "0.1.0"
description = "GManager Desktop Application - Tauri-based desktop client"
authors = ["gmanager"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ring = "0.17"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
thiserror = "2"
hex = "0.4"
chrono = "0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
